// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A. Whitespace variations 1`] = `
Object {
  "buffer": "/***/",
  "comment": "/***/",
  "errors": Array [],
  "lines": Array [],
}
`;

exports[`A. Whitespace variations 2`] = `
Object {
  "buffer": " /***/ ",
  "comment": "/***/",
  "errors": Array [],
  "lines": Array [],
}
`;

exports[`A. Whitespace variations 3`] = `
Object {
  "buffer": " /** */ ",
  "comment": "/** */",
  "errors": Array [],
  "lines": Array [],
}
`;

exports[`A. Whitespace variations 4`] = `
Object {
  "buffer": " /**[n][n]*/ ",
  "comment": "/**[n][n]*/",
  "errors": Array [],
  "lines": Array [
    "",
  ],
}
`;

exports[`A. Whitespace variations 5`] = `
Object {
  "buffer": " /**L1*/ ",
  "comment": "/**L1*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 6`] = `
Object {
  "buffer": " /** L1 */ ",
  "comment": "/** L1 */",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 7`] = `
Object {
  "buffer": " /**L1[n]*/ ",
  "comment": "/**L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 8`] = `
Object {
  "buffer": " /**L1*[n]*/ ",
  "comment": "/**L1*[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1*",
  ],
}
`;

exports[`A. Whitespace variations 9`] = `
Object {
  "buffer": " /**[n]L1*/ ",
  "comment": "/**[n]L1*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 10`] = `
Object {
  "buffer": " /**[n] L1 */ ",
  "comment": "/**[n] L1 */",
  "errors": Array [],
  "lines": Array [
    " L1",
  ],
}
`;

exports[`A. Whitespace variations 11`] = `
Object {
  "buffer": " /**[n]L1[n]*/ ",
  "comment": "/**[n]L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 12`] = `
Object {
  "buffer": " /**[n]L1[n][n]L2*/ ",
  "comment": "/**[n]L1[n][n]L2*/",
  "errors": Array [],
  "lines": Array [
    "L1",
    "",
    "L2",
  ],
}
`;

exports[`A. Whitespace variations 13`] = `
Object {
  "buffer": " /**[n]*L1[n]*/ ",
  "comment": "/**[n]*L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 14`] = `
Object {
  "buffer": " /**[n] * L1[n]*/ ",
  "comment": "/**[n] * L1[n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 15`] = `
Object {
  "buffer": " /**[n] * L1[n] */ ",
  "comment": "/**[n] * L1[n] */",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`A. Whitespace variations 16`] = `
Object {
  "buffer": " /**L1[n] *L2[n]L3*/ ",
  "comment": "/**L1[n] *L2[n]L3*/",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
    "L3",
  ],
}
`;

exports[`A. Whitespace variations 17`] = `
Object {
  "buffer": " /** L1[n] * L2[n] L3*/ ",
  "comment": "/** L1[n] * L2[n] L3*/",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
    " L3",
  ],
}
`;

exports[`A. Whitespace variations 18`] = `
Object {
  "buffer": " /** L1 [n] * L2 [n] L3 */ ",
  "comment": "/** L1 [n] * L2 [n] L3 */",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
    " L3",
  ],
}
`;

exports[`A. Whitespace variations 19`] = `
Object {
  "buffer": "/**  L1  [r][n] *  L2  [r][n]  L3  [r][n]  L4 */",
  "comment": "/**  L1  [r][n] *  L2  [r][n]  L3  [r][n]  L4 */",
  "errors": Array [],
  "lines": Array [
    " L1",
    " L2",
    "  L3",
    "  L4",
  ],
}
`;

exports[`B. Extra stars 1`] = `
Object {
  "buffer": " /****/ ",
  "comment": "/****/",
  "errors": Array [],
  "lines": Array [
    "*",
  ],
}
`;

exports[`B. Extra stars 2`] = `
Object {
  "buffer": " /**L1**/ ",
  "comment": "/**L1**/",
  "errors": Array [],
  "lines": Array [
    "L1*",
  ],
}
`;

exports[`B. Extra stars 3`] = `
Object {
  "buffer": " /***L1*/ ",
  "comment": "/***L1*/",
  "errors": Array [],
  "lines": Array [
    "*L1",
  ],
}
`;

exports[`B. Extra stars 4`] = `
Object {
  "buffer": "[n]/*****[n] **X**[n] *****/ ",
  "comment": "/*****[n] **X**[n] *****/",
  "errors": Array [],
  "lines": Array [
    "***",
    "*X**",
    "***",
  ],
}
`;

exports[`C. Newline styles 1`] = `
Object {
  "buffer": "[r][n]/**[r][n] * L1[r][n] */[r][n]",
  "comment": "/**[r][n] * L1[r][n] */",
  "errors": Array [],
  "lines": Array [
    "L1",
  ],
}
`;

exports[`C. Newline styles 2`] = `
Object {
  "buffer": "/**[r][n]L1[r][n]L2[r][n]*/",
  "comment": "/**[r][n]L1[r][n]L2[r][n]*/",
  "errors": Array [],
  "lines": Array [
    "L1",
    "L2",
  ],
}
`;

exports[`C. Newline styles 3`] = `
Object {
  "buffer": "/** L [r] 1 */",
  "comment": "/** L [r] 1 */",
  "errors": Array [],
  "lines": Array [
    "L [r] 1",
  ],
}
`;

exports[`D. Parser errors 1`] = `
Object {
  "buffer": "",
  "comment": "",
  "errors": Array [
    "Expecting a \\"/**\\" comment",
  ],
  "lines": Array [],
}
`;

exports[`D. Parser errors 2`] = `
Object {
  "buffer": "/*",
  "comment": "",
  "errors": Array [
    "(1,1): Expecting a \\"/**\\" comment",
  ],
  "lines": Array [],
}
`;

exports[`D. Parser errors 3`] = `
Object {
  "buffer": "//",
  "comment": "",
  "errors": Array [
    "(1,2): Expecting a leading \\"/**\\"",
  ],
  "lines": Array [],
}
`;

exports[`D. Parser errors 4`] = `
Object {
  "buffer": "/** L1[n] L2",
  "comment": "",
  "errors": Array [
    "(1,1): Unexpected end of input",
  ],
  "lines": Array [],
}
`;

exports[`D. Parser errors 5`] = `
Object {
  "buffer": "/** L1 *",
  "comment": "",
  "errors": Array [
    "(1,1): Unexpected end of input",
  ],
  "lines": Array [],
}
`;
